Use Java 24